--- a/WebContent/member/doctor/contact/index.xhtml
+++ b/WebContent/member/doctor/contact/index.xhtml
@@ -10,23 +10,23 @@ xmlns:p="http://primefaces.org/ui">
     <meta name="description" content=""/>
     <meta name="author" content="Mosaddek"/>
     <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina"/>
-    <link rel="shortcut icon" href="../../frontend/member/img/favicon.png"/>
+    <link rel="shortcut icon" href="../../../frontend/member/img/favicon.png"/>
 
-    <title>Smart Babies - Profile</title>
+    <title>Smart Babies - Doktorum</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../frontend/member/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../../frontend/member/css/bootstrap-reset.css" rel="stylesheet"/>
+    <link href="../../../frontend/member/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../../../frontend/member/css/bootstrap-reset.css" rel="stylesheet"/>
     <!--external css-->
-    <link href="../../frontend/member/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
+    <link href="../../../frontend/member/assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <!-- Custom styles for this template -->
-    <link href="../../frontend/member/css/style.css" rel="stylesheet"/>
-    <link href="../../frontend/member/css/style-responsive.css" rel="stylesheet" />
+    <link href="../../../frontend/member/css/style.css" rel="stylesheet"/>
+    <link href="../../../frontend/member/css/style-responsive.css" rel="stylesheet" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
     <!--[if lt IE 9]>
-      <script src="../../frontend/member/js/html5shiv.js"></script>
-      <script src="../../frontend/member/js/respond.min.js"></script>
+      <script src="../../../frontend/member/js/html5shiv.js"></script>
+      <script src="../../../frontend/member/js/respond.min.js"></script>
     <![endif]-->
   </h:head>
 
@@ -57,7 +57,7 @@ xmlns:p="http://primefaces.org/ui">
                       </li>
                       <li>
                           <a href="#">
-                              <span class="photo"><img alt="avatar" src="../../frontend/member/img/avatar-mini.jpg"/></span>
+                              <span class="photo"><img alt="avatar" src="../../../frontend/member/img/avatar-mini.jpg"/></span>
                                     <span class="subject">
                                     <span class="from">Jonathan Smith</span>
                                     <span class="time">Just now</span>
@@ -69,7 +69,7 @@ xmlns:p="http://primefaces.org/ui">
                       </li>
                       <li>
                           <a href="#">
-                              <span class="photo"><img alt="avatar" src="../../frontend/member/img/avatar-mini2.jpg"/></span>
+                              <span class="photo"><img alt="avatar" src="../../../frontend/member/img/avatar-mini2.jpg"/></span>
                                     <span class="subject">
                                     <span class="from">Jhon Doe</span>
                                     <span class="time">10 mins</span>
@@ -81,7 +81,7 @@ xmlns:p="http://primefaces.org/ui">
                       </li>
                       <li>
                           <a href="#">
-                              <span class="photo"><img alt="avatar" src="../../frontend/member/img/avatar-mini3.jpg"/></span>
+                              <span class="photo"><img alt="avatar" src="../../../frontend/member/img/avatar-mini3.jpg"/></span>
                                     <span class="subject">
                                     <span class="from">Jason Stathum</span>
                                     <span class="time">3 hrs</span>
@@ -93,7 +93,7 @@ xmlns:p="http://primefaces.org/ui">
                       </li>
                       <li>
                           <a href="#">
-                              <span class="photo"><img alt="avatar" src="../../frontend/member/img/avatar-mini4.jpg"/></span>
+                              <span class="photo"><img alt="avatar" src="../../../frontend/member/img/avatar-mini4.jpg"/></span>
                                     <span class="subject">
                                     <span class="from">Jondi Rose</span>
                                     <span class="time">Just now</span>
@@ -169,14 +169,14 @@ xmlns:p="http://primefaces.org/ui">
                   <!-- user login dropdown start-->
                   <li class="dropdown">
                       <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                          <img alt="" src="../../frontend/member/img/avatar1_small.jpg"/>
+                          <img alt="" src="../../../frontend/member/img/avatar1_small.jpg"/>
                           <span class="username">Batuhan ÇIKRIKCI</span>
                           <b class="caret"></b>
                       </a>
                       <ul class="dropdown-menu extended logout">
                           <li><a href="/smrtbaby/member/profile"><i class="icon-suitcase"></i>Profil</a></li>
                           <li><a href="/smrtbaby/member/profile/edit"><i class="icon-edit"></i>Profil Düzenle</a></li>
-                          <li><a href="/smrtbaby/member/profile/acrivity"><i class="icon-bell-alt"></i>Aktiviteler</a></li>
+                          <li><a href="/smrtbaby/member/profile/activity"><i class="icon-bell-alt"></i>Aktiviteler</a></li>
                           <li><a href="/smrtbaby/login"><i class="icon-key"></i>Çıkış</a></li>
                       </ul>
                   </li>
@@ -243,15 +243,14 @@ xmlns:p="http://primefaces.org/ui">
                           <span>Takvim</span>
                       </a>
                   </li>
-                  <li class="sub-menu">
-                      <a href="javascript:;">
+                  <li class="sub-menu" >
+                      <a href="javascript:;" class="active">
                           <i class="icon-user-md"></i>
                           <span>Doktorum</span>
                       </a>
                       <ul class="sub">                      
                           <li><a href="/smrtbaby/member/doctor/appointment">Randevu</a></li>
-                          <li><a href="/smrtbaby/member/doctor/information">Bilgiler</a></li>
-                          <li><a href="/smrtbaby/member/doctor/contact">İletişim</a></li>                          
+                          <li class="active"><a href="/smrtbaby/member/doctor/contact">İletişim</a></li>                          
                       </ul>
                   </li>
                  
@@ -269,17 +268,11 @@ xmlns:p="http://primefaces.org/ui">
                       <section class="panel">
                           <div class="user-heading round">
                               <a href="#">
-                                  <img src="../../frontend/member/img/profile-avatar.jpg" alt=""/>
+                                  <img src="../../../frontend/member/img/profile-avatar.jpg" alt=""/>
                               </a>
                               <h1>Jonathan Smith</h1>
                               <p>jsmith@flatlab.com</p>
                           </div>
-
-                          <ul class="nav nav-pills nav-stacked">
-                              <li class="active"><a href="/smrtbaby/member/profile"> <i class="icon-user"></i> Profil </a></li>
-                              <li><a href="/smrtbaby/member/profile/edit/activity"> <i class="icon-bell-alt"></i> Aktiviteler</a></li>
-                              <li><a href="/smrtbaby/member/profile/edit"> <i class="icon-edit"></i> Profil Düzenle </a></li>
-                          </ul>
 
                       </section>
                   </aside>
@@ -390,16 +383,16 @@ xmlns:p="http://primefaces.org/ui">
   </section>
 
     <!-- js placed at the end of the document so the pages load faster -->
-    <script src="../../frontend/member/js/jquery.js"></script>
-    <script src="../../frontend/member/js/bootstrap.min.js"></script>
-    <script class="include" type="text/javascript" src="../../frontend/member/js/jquery.dcjqaccordion.2.7.js"></script>
-    <script src="../../frontend/member/js/jquery.scrollTo.min.js"></script>
-    <script src="../../frontend/member/js/jquery.nicescroll.js" type="text/javascript"></script>
-    <script src="../../frontend/member/assets/jquery-knob/js/jquery.knob.js"></script>
-    <script src="../../frontend/member/js/respond.min.js" ></script>
+    <script src="../../../frontend/member/js/jquery.js"></script>
+    <script src="../../../frontend/member/js/bootstrap.min.js"></script>
+    <script class="include" type="text/javascript" src="../../../frontend/member/js/jquery.dcjqaccordion.2.7.js"></script>
+    <script src="../../../frontend/member/js/jquery.scrollTo.min.js"></script>
+    <script src="../../../frontend/member/js/jquery.nicescroll.js" type="text/javascript"></script>
+    <script src="../../../frontend/member/assets/jquery-knob/js/jquery.knob.js"></script>
+    <script src="../../../frontend/member/js/respond.min.js" ></script>
 
     <!--common script for all pages-->
-    <script src="../../frontend/member/js/common-scripts.js"></script>
+    <script src="../../../frontend/member/js/common-scripts.js"></script>
 
   <script>
 
