--- a/WebContent/contact/index.xhtml
+++ b/WebContent/contact/index.xhtml
@@ -189,8 +189,8 @@ xmlns:p="http://primefaces.org/ui">
     <script type="text/javascript" src="../frontend/guest/assets/bxslider/jquery.bxslider.js"></script>
 
 
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp;sensor=false"></script>
-
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    
     <!--common script for all pages-->
     <script src="../frontend/guest/js/common-scripts.js"></script>
 
