--- a/WebContent/register/index.xhtml
+++ b/WebContent/register/index.xhtml
@@ -1,40 +1,67 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-xmlns:h="http://java.sun.com/jsf/html"
-xmlns:f="http://java.sun.com/jsf/core"
-xmlns:ui="http://java.sun.com/jsf/facelets"
-xmlns:p="http://primefaces.org/ui">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 <h:head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="description" content=""/>
-    <meta name="author" content="Mosaddek"/>
-    <meta name="keyword" content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina"/>
-    <link rel="shortcut icon" href="../frontend/member/img/favicon.png"/>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="description" content="" />
+	<meta name="author" content="Mosaddek" />
+	<meta name="keyword"
+		content="FlatLab, Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina" />
+	<link rel="shortcut icon" href="../frontend/member/img/favicon.png" />
 
-    <title>Smart Babies | Kayıt Ol</title>
+	<title>Smart Babies | Kayıt Ol</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="../frontend/member/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="../frontend/member/css/bootstrap-reset.css" rel="stylesheet"/>
-    <!--external css-->
-    <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
-    <!-- Custom styles for this template -->
-    <link href="../frontend/member/css/style.css" rel="stylesheet"/>
-    <link href="../frontend/member/css/style-responsive.css" rel="stylesheet" />
+	<!-- Bootstrap core CSS -->
+	<link href="../frontend/member/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="../frontend/member/css/bootstrap-reset.css"
+		rel="stylesheet" />
+	<!--external css-->
+	<link
+		href="../frontend/member/assets/font-awesome/css/font-awesome.css"
+		rel="stylesheet" />
+	<!-- Custom styles for this template -->
+	<link href="../frontend/member/css/style.css" rel="stylesheet" />
+	<link href="../frontend/member/css/style-responsive.css"
+		rel="stylesheet" />
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
-    <!--[if lt IE 9]>
+	<!-- HTML5 shim and Respond.js IE8 support of HTML5 tooltipss and media queries -->
+	<!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
     <![endif]-->
 </h:head>
 
-  <h:body class="login-body">
+<h:body class="login-body">
 
-    <div class="container">
+	<div class="container">
 
-      <form class="form-signin" action="/smrtbaby/">
+
+		<h:form styleClass="form-signin">
+			<h2 class="form-signin-heading">Kaydol</h2>
+			<div class="login-wrap">
+				<h:inputText id="firstName" styleClass="form-control" />
+				<h:inputText id="lastName" styleClass="form-control" />
+				<h:inputText id="email" styleClass="form-control" />
+				<h:inputText id="birthday" styleClass="form-control" />
+				<h:inputText id="phone" styleClass="form-control" />
+				<h:inputSecret id="password" styleClass="form-control" />
+				<h:commandButton id="submit"
+					styleClass="btn btn-lg btn-login btn-block" value="Gönder" />
+				<div class="registration">
+					Zaten Kayıtlıyım. <a href="/smrtbaby/login"> Giriş </a>
+				</div>
+
+			</div>
+		</h:form>
+
+
+
+
+		<!-- <form class="form-signin" action="/smrtbaby/">
         <h2 class="form-signin-heading">Kaydol</h2>
         <div class="login-wrap">
             <p>Kişisel bilgilerinizi aşağıya girin</p>
@@ -57,10 +84,10 @@ xmlns:p="http://primefaces.org/ui">
 
         </div>
 
-      </form>
+      </form> -->
 
-    </div>
+	</div>
 
 
-  </h:body>
+</h:body>
 </html>
