edited newbaby pages

--- a/WebContent/member/newbaby/earliest/index.xhtml
+++ b/WebContent/member/newbaby/earliest/index.xhtml
@@ -267,106 +267,64 @@ xmlns:p="http://primefaces.org/ui">
                   <div class="col-lg-12">
                       <section class="panel">
                           <header class="panel-heading">
-                              Forms Wizard
+                              Doğum Yapabileceğiniz En Erken Tarihe Göre Aile Planlaması
                           </header>
                           <div class="panel-body">
                               <div class="stepy-tab">
                                   <ul id="default-titles" class="stepy-titles clearfix">
                                       <li id="default-title-0" class="current-step">
-                                          <div>Step 1</div>
+                                          <div>Adım 1</div>
                                       </li>
                                       <li id="default-title-1" class="">
-                                          <div>Step 2</div>
-                                      </li>
-                                      <li id="default-title-2" class="">
-                                          <div>Step 3</div>
+                                          <div>Adım 2</div>
                                       </li>
                                   </ul>
                               </div>
                               <form class="form-horizontal" id="default">
-                                  <fieldset title="Step1" class="step" id="default-step-0">
-                                      <legend> </legend>
+                                  <fieldset title="Adım 1" class="step" id="default-step-0" >
+                                      <legend></legend>
+                                      <header class="panel-heading">Uygun ovulasyon dönemi için son 3 menstruasyon tarihinizi girin.</header>
+                                      <br/>
                                       <div class="form-group">
-                                          <label class="col-lg-2 control-label">Full Name</label>
-                                          <div class="col-lg-10">
-                                              <input type="text" class="form-control" placeholder="Full Name"/>
-                                          </div>
-                                      </div>
-                                      <div class="form-group">
-                                          <label class="col-lg-2 control-label">Email Address</label>
-                                          <div class="col-lg-10">
-                                              <input type="text" class="form-control" placeholder="Email Address"/>
-                                          </div>
-                                      </div>
-                                      <div class="form-group">
-                                          <label class="col-lg-2 control-label">User Name</label>
-                                          <div class="col-lg-10">
-                                              <input type="text" class="form-control" placeholder="Username"/>
-                                          </div>
-                                      </div>
-
-                                  </fieldset>
-                                  <fieldset title="Step 2" class="step" id="default-step-1" >
-                                      <legend> </legend>
-                                      <div class="form-group">
-                                          <label class="col-lg-2 control-label">Phone</label>
+                                          <label class="col-lg-2 control-label">Son Menstruasyon Tarihiniz</label>
                                           <div class="col-lg-10">
                                               <input type="text" class="form-control" placeholder="Phone"/>
                                           </div>
                                       </div>
                                       <div class="form-group">
-                                          <label class="col-lg-2 control-label">Mobile</label>
+                                          <label class="col-lg-2 control-label">Sondan Bir Önceki Menstruasyon Tarihiniz</label>
+                                          <div class="col-lg-10">
+                                              <input type="text" class="form-control" placeholder="Phone"/>
+                                          </div>
+                                      </div>
+                                      <div class="form-group">
+                                          <label class="col-lg-2 control-label">Sondan İki Önceki Menstruasyon Tarihiniz</label>
+                                          <div class="col-lg-10">
+                                              <input type="text" class="form-control" placeholder="Phone"/>
+                                          </div>
+                                      </div>
+
+                                  </fieldset>
+                                  <fieldset title="Adım 2" class="step" id="default-step-1" >
+                                      <legend> </legend>
+                                       <header class="panel-heading">Beslenme planınız için gerekli bilgileri girin.</header>
+                                       <br/>
+                                       <div class="form-group">
+                                          <label class="col-lg-2 control-label">Şuanki Kilonuz</label>
                                           <div class="col-lg-10">
                                               <input type="text" class="form-control" placeholder="Mobile"/>
                                           </div>
                                       </div>
                                       <div class="form-group">
-                                          <label class="col-lg-2 control-label">Address</label>
+                                          <label class="col-lg-2 control-label">Boyunuz</label>
                                           <div class="col-lg-10">
-                                              <textarea class="form-control" cols="60" rows="5"></textarea>
-                                          </div>
-                                      </div>
-
-                                  </fieldset>
-                                  <fieldset title="Step 3" class="step" id="default-step-2" >
-                                      <legend> </legend>
-                                      <div class="form-group">
-                                          <label class="col-lg-2 control-label">Full Name</label>
-                                          <div class="col-lg-10">
-                                              <p class="form-control-static">Tawseef Ahmed</p>
+                                              <input type="text" class="form-control" placeholder="Mobile"/>
                                           </div>
                                       </div>
                                       <div class="form-group">
-                                          <label class="col-lg-2 control-label">Email Address</label>
+                                          <label class="col-lg-2 control-label">Yaşınız</label>
                                           <div class="col-lg-10">
-                                              <p class="form-control-static">tawseef@vectorlab.com</p>
-                                          </div>
-                                      </div>
-                                      <div class="form-group">
-                                          <label class="col-lg-2 control-label">User Name</label>
-                                          <div class="col-lg-10">
-                                              <p class="form-control-static">tawseef</p>
-                                          </div>
-                                      </div>
-                                      <div class="form-group">
-                                          <label class="col-lg-2 control-label">Phone</label>
-                                          <div class="col-lg-10">
-                                              <p class="form-control-static">01234567</p>
-                                          </div>
-                                      </div>
-                                      <div class="form-group">
-                                          <label class="col-lg-2 control-label">Mobile</label>
-                                          <div class="col-lg-10">
-                                              <p class="form-control-static">01234567</p>
-                                          </div>
-                                      </div>
-                                      <div class="form-group">
-                                          <label class="col-lg-2 control-label">Address</label>
-                                          <div class="col-lg-10">
-                                              <p class="form-control-static">
-                                                  Dreamland Ave, Suite 73
-                                                  AU, PC 1361
-                                                  P: (123) 456-7891 </p>
+                                              <input type="text" class="form-control" placeholder="Mobile"/>
                                           </div>
                                       </div>
                                   </fieldset>
@@ -414,9 +372,9 @@ xmlns:p="http://primefaces.org/ui">
 
       $(function() {
           $('#default').stepy({
-              backLabel: 'Previous',
+              backLabel: 'Önceki',
               block: true,
-              nextLabel: 'Next',
+              nextLabel: 'Sonraki',
               titleClick: true,
               titleTarget: '.stepy-tab'
           });
