--- a/WebContent/login/index.xhtml
+++ b/WebContent/login/index.xhtml
@@ -64,12 +64,12 @@ xmlns:p="http://primefaces.org/ui">
                       </div>
                       <div class="modal-body">
                           <p>Şifrenizi sıfırlamak için aşağıya e-posta adresinizi girin.</p>
-                          <h:inputText styleClass="form-control placeholder-no-fix" />
+                         <!--  <h:inputText styleClass="form-control placeholder-no-fix" /> -->
 
                       </div>
                       <div class="modal-footer">
                           <button data-dismiss="modal" id="btnCancel" class="btn btn-default" type="button">Geri</button>
-                          <h:commandButton styleClass="btn btn-success" value="Gönder"/>
+                          <!-- <h:commandButton styleClass="btn btn-success" value="Gönder"/> -->
                       </div>
                   </div>
               </div>
