--- a/WebContent/about/index.xhtml
+++ b/WebContent/about/index.xhtml
@@ -173,7 +173,7 @@ xmlns:p="http://primefaces.org/ui">
                     <h4>
                         <a href="#">Barış Arıburnu</a>
                     </h4>
-                    <p class="text-muted"> Database Designer </p>
+                    <p class="text-muted"> Database Designer <br/> Front-End Developer</p>
                     <div class="team-social-link">
                         <a href="#"><i class="icon-facebook"></i></a>
                         <a href="#"><i class="icon-twitter"></i></a>
@@ -191,7 +191,7 @@ xmlns:p="http://primefaces.org/ui">
                     <h4>
                         <a href="#">Batuhan Çıkrıkcı</a>
                     </h4>
-                    <p class="text-muted"> Back-And Developer </p>
+                    <p class="text-muted"> Principal Architect <br/> Back-And Developer</p>
                     <div class="team-social-link">
                         <a href="#"><i class="icon-facebook"></i></a>
                         <a href="#"><i class="icon-twitter"></i></a>
